[package]
name = "satschain-indexer"
version = "1.4.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/satschain/explorerbackend"
description = "Scalable SQL indexer for Satschain compatible blockchains"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.0"
array-bytes = "6"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clickhouse = "0.11"
clickhouse-rs = "0.1.19"
dotenv = "0.15.0"
ethers = { version = "2", features = ["rustls"] }
futures = "0.3"
hex = "0.4"
hyper = "0.14"
hyper-tls = "0.5"
jsonrpsee = { version = "0.20", features = ["macros", "server"] }
jsonrpsee-http-client = "0.20"
jsonrpsee-ws-client = "0.20"
log = "0.4"
primitive-types = "0.12"
rand = "0.8"
serde = "1"
serde_bytes = "0.11"
serde_json = "1"
serde_repr = "0.1"
serde_with = "3"
tokio = { version = "1", features = ["full"] }
url = "2"

[dependencies.simple_logger]
version = "4"
default-features = false
features = ["colors"]

[[bin]]
path = "bin/satschain-indexer.rs"
name = "satschain-indexer"
